--- a/trunk/MP-TVSeries/Resources/Languages/lt.xml
+++ b/trunk/MP-TVSeries/Resources/Languages/lt.xml
@@ -4,4 +4,8 @@
   <!--Additional ones should be added for other languages, dont translate existing ones as they will be used as well-->
   <!--Rate Descriptions - 5 Stars-->
   <!--Rate Descriptions - 10 Stars-->
+  <string name="Director" Original="Director">Režisierius</string>
+  <string name="Rated" Original="Rated">Vertinimas</string>
+  <string name="Runtime" Original="Runtime">Trukmė</string>
+  <string name="Votes" Original="votes">Balsai</string>
 </resources>
