--- a/trunk/MP-TVSeries/Resources/Languages/tr.xml
+++ b/trunk/MP-TVSeries/Resources/Languages/tr.xml
@@ -4,4 +4,8 @@
   <!--Additional ones should be added for other languages, dont translate existing ones as they will be used as well-->
   <!--Rate Descriptions - 5 Stars-->
   <!--Rate Descriptions - 10 Stars-->
+  <string name="Director" Original="Director">Yönetmen</string>
+  <string name="Rated" Original="Rated">Oylandý</string>
+  <string name="Runtime" Original="Runtime">Süre</string>
+  <string name="Votes" Original="votes">oylar</string>
 </resources>
